# euphonium

./: .gitignore  Cargo.toml
src/: ast.rs  error.rs  fragment.rs  frame.rs  ir.rs  lalrpop_parser.lalrpop  lexer.rs  lib.rs  log.rs  parser.lalrpop  parser.rs  sourcemap.rs  test_utils.rs  tmp.rs  translate.rs  ty.rs  typecheck.rs  utils.rs
src/ir/: interpreter.rs
src/translate/: expr.rs  level.rs
src/utils/: test_utils.rs  u64ext.rs
test/: test1.euph  test_exprs.euph  test_tydecls.euph
test-euph-files/: test_enum_exprs.euph  test_exprs.euph  test_tydecls.euph
