[package]
name = "euphonium"
version = "0.1.0"
authors = ["Christopher Fu <chris@christopherfu.me>"]
edition = "2018"

[build-dependencies]
lalrpop = "0.17.1"

[dependencies]
lalrpop-util = "0.17.1"
regex = "1.1.8"
lazy_static = "1.3.0"
codespan = "0.3.0"
codespan-reporting = "0.3.0"
clap = "2.33.0"
itertools = "0.8.0"
maplit = "1.0.1"

[dev-dependencies]
pretty_assertions = "0.6.1"
