[package]
name = "euphonium"
version = "0.1.0"
authors = ["Christopher Fu <chris@christopherfu.me>"]
edition = "2018"

[build-dependencies]
lalrpop = "0.17.2"

[dependencies]
lalrpop-util = "0.17.2"
regex = "1.3.1"
lazy_static = "1.4.0"
codespan = "0.4.1"
codespan-reporting = "0.4.1"
clap = "2.33.0"
itertools = "0.8.0"
maplit = "1.0.2"
slog = "2.5.2"
slog-term = "2.4.1"
slog-async = "2.3.0"

[dev-dependencies]
pretty_assertions = "0.6.1"
